--- a/ch1/index.html
+++ b/ch1/index.html
@@ -32,5 +32,8 @@
 
 </div>
 
+<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+
 </body>
 </html>
