--- a/ch1/index.html
+++ b/ch1/index.html
@@ -33,6 +33,8 @@
 </div>
 
 <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSPlugin.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 
 </body>
