--- a/ch2-timeline/index.html
+++ b/ch2-timeline/index.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-<div class="controlButtons">
-    <button id="start">Start</button>
-    <button id="pause">Pause</button>
-    <button id="stop">Stop</button>
-    <button id="reverse">Reverse</button>
-</div>
 <div class="content-holder">
     <div class="tools">
         <img id="toolBox" src="images/tool-box.svg"/>
@@ -39,10 +33,7 @@
 
 <script src="js/jquery-1.11.3.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TimelineLite.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/easing/EasePack.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
 
 <script src="js/app.js"></script>
 </body>
