04 - 03 Build in a Webpage Pt2

--- a/ch2-timeline/index.html
+++ b/ch2-timeline/index.html
@@ -8,10 +8,10 @@
 <body>
 <div class="content-holder">
     <div class="tools">
-        <img id="toolBox" src="images/tool-box.svg"/>
-        <img id="weightLifter" src="images/weight-lifter.svg"/>
-        <img id="crazy" src="images/crazy-fast.svg"/>
-        <img id="leaf" src="images/leaf.png"/>
+        <img id="toolBox" class="tool" src="images/tool-box.svg"/>
+        <img id="weightLifter" class="tool" src="images/weight-lifter.svg"/>
+        <img id="crazy" class="tool" src="images/crazy-fast.svg"/>
+        <img id="leaf" class="tool" src="images/leaf.png"/>
     </div>
 
     <div class="title">
