05 - 04 Add ThrowProps to Draggable

--- a/ch5-draggable/index.html
+++ b/ch5-draggable/index.html
@@ -69,7 +69,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/utils/Draggable.min.js"></script>
-
+<script src="app/tprps.min.js"></script>
 <script src="app/app.js"></script>
 
 </body>
